[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprites/level_prefab_sprites/greklovick/Grek Treadmill conveyer floor.png" type="Texture" id=1]
[ext_resource path="res://src/level prefabs/grek prefabs/GrekTreatmillHazard.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/level_prefab_sprites/greklovick/Grek Treadmill crate 1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/level_prefab_sprites/greklovick/Grek Treadmill crate 2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/level_prefab_sprites/greklovick/Grek Treadmill crate 3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/level_prefab_sprites/greklovick/Grek Treadmill crate 4.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 1216, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 1216, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 608, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 114, 47 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 64, 47.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 66, 59 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 207, 66.5 )

[node name="GrekTreatmillHazard" type="Node2D"]
script = ExtResource( 2 )

[node name="ConveyerFloor" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="ConveyerFloor"]
frames = SubResource( 3 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConveyerFloor"]
shape = SubResource( 4 )

[node name="Crate1" type="KinematicBody2D" parent="."]
position = Vector2( -440, -96 )
collision_layer = 4
collision_mask = 3

[node name="GrekTreadmillCrate1" type="Sprite" parent="Crate1"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crate1"]
position = Vector2( 0, -17 )
shape = SubResource( 5 )
one_way_collision = true

[node name="Crate2" type="KinematicBody2D" parent="."]
position = Vector2( -177, -96 )
collision_layer = 4
collision_mask = 3

[node name="GrekTreadmillCrate1" type="Sprite" parent="Crate2"]
position = Vector2( 0, -10 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crate2"]
position = Vector2( 0, -37.5 )
shape = SubResource( 6 )
one_way_collision = true

[node name="Crate3" type="KinematicBody2D" parent="."]
position = Vector2( 36, -120 )
collision_layer = 4
collision_mask = 3

[node name="GrekTreadmillCrate1" type="Sprite" parent="Crate3"]
position = Vector2( 0, -10 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crate3"]
position = Vector2( 0, -49 )
shape = SubResource( 7 )
one_way_collision = true

[node name="Crate4" type="KinematicBody2D" parent="."]
position = Vector2( 370, -134 )
collision_layer = 4
collision_mask = 3

[node name="GrekTreadmillCrate1" type="Sprite" parent="Crate4"]
position = Vector2( 0, -10 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crate4"]
position = Vector2( 0, -56.5 )
shape = SubResource( 8 )
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
